# file-transmission-service

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: data.hpp  test.hpp
src/: client.cpp  data.cpp  server.cpp  test.cpp
